# NWProgramming_TheWheelOfFortune

./: CMakeLists.txt  main.c
Handle/src/: HandleClient.c  HandleMain.c  InitClient.c  handleGame.c  handleLogin.c  handleRecvData.c  handleRoom.c
View/client/: Client.glade  Client.glade~
View/src/: InitScreen.c  LoginController.c  gameController.c  mainController.c  roomController.c
